--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
 <title>Quick Launch</title>
 
+<!-- pages trigger -->
+      
 <style>
   :root {
     --overlay: rgba(0, 0, 0, 0.35);
@@ -167,3 +169,4 @@
 </div>
 </body>
 </html>
+
