--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover, user-scalable=no" />
-<title>Quick Launch</title>
-
-<!-- pages trigger -->
+<title>환영합니다</title>
 
 <style>
   :root {
@@ -55,7 +53,7 @@
   }
 
   #clock {
-    font-size: 38px;
+    font-size: 30px;
     font-weight: 600;
   }
 
@@ -244,10 +242,11 @@ function updateClock() {
 }
 
 updateClock();
-setInterval(updateClock, 60000);
+setInterval(updateClock, 1000);
 </script>
 
 </body>
 </html>
+
 
 
